updated UI, should be usable enough for usability study

--- a/ui/message_chat_box.html
+++ b/ui/message_chat_box.html
@@ -30,70 +30,6 @@
                 <h4>Recent</h4>
               </div>
 
-              <!-- Search bar - unused -->
-              <!-- <div class="srch_bar">
-                <div class="stylish-input-group">
-                  <input type="text" class="search-bar" placeholder="Search">
-                  <span class="input-group-addon">
-                    <button type="button"> <i class="fa fa-search" aria-hidden="true"></i> </button>
-                  </span> </div>
-              </div> -->
-
-            <!-- New chat button -->
-            <button type="button" class="btn btn-info" data-toggle="modal" data-target="#newChatModal">
-              New Chat
-            </button>
-            <!-- New chat modal -->
-            <div class="modal fade" id="newChatModal" tabindex="-1" role="dialog" aria-labelledby="newChatModalTitle" aria-hidden="true">
-              <div class="modal-dialog modal-dialog-centered" role="document">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <h5 class="modal-title" id="newChatModalTitle">New Chat</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                    </button>
-                  </div>
-                  <div class="modal-body">
-                    <form>
-                      <div class="form-group">
-                        <label for="usernames" class="col-form-label" placeholder="Enter usernames, separated by commas">Members:</label>
-                        <textarea class="form-control" id="usernames" placeholder="user1, user2, ..."></textarea>
-                      </div>
-                      <div class="form-group">
-                        <label for="chat-threshold" class="col-form-label">Threshold:</label>
-                        <input type="text" class="form-control" id="chat-threshold">
-                        <small id="thresholdHelpBlock" class="form-text text-muted">
-                          Enter the minimum number of members needed to grant access to the chat history.
-                          This must be equal or greater than the number of members in the chat.
-                        </small>
-                      </div>
-                      <div class="form-group">
-                        <label for="expiry-time" class="col-form-label">Default message expiry time:</label>
-                        <select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
-                          <option selected>Choose...</option>
-                          <option value="1">1 min</option>
-                          <option value="5">5 min</option>
-                          <option value="10">10 min</option>
-                          <option value="30">30 min</option>
-                          <option value="60">1 hr</option>
-                          <option value="240">4 hr</option>
-                          <option value="600">10 hr</option>
-                          <option value="1440">24 hr</option>
-                        </select>
-                        <small id="expiryHelpBlock" class="form-text text-muted">
-                          This is how long each message is available to see before it deleted locally and encrypted
-                        </small>
-                      </div>
-                    </form>
-                  </div>
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                    <button type="submit" class="btn btn-info" data-dismiss="modal">Create</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-
             <!-- Request access button -->
             <button type="button" class="btn btn-info" data-toggle="modal" data-target="#requestAccessModal">
               Get Access
@@ -130,7 +66,8 @@
                     <form>
                       <div class="form-group">
                         <label for="reason" class="col-form-label">Reason for access:</label>
-                        <textarea class="form-control" id="reason" placeholder="(optional)"></textarea>
+                        <textarea class="form-control" id="reason"
+                          placeholder="(required)"></textarea>
                       </div>
                     </form>
                   </div>
@@ -160,8 +97,9 @@
                   </div>
                   <div class="modal-body">
                     <p>
-                      Corwin Shanner has requested access to the chat
-                      "CPEN442 Bros". Make sure to listen to the audio clip to
+                    <span class="text-info">Corwin Shanner</span> has requested
+                    access to the chat history for 
+                    <span class="text-info">CPEN442 Bros</span>. Make sure to listen to the audio clip to
                       verify that it's really them, and if you're not sure, follow up with
                       them!
                     </p>
@@ -178,9 +116,22 @@
                     </div>
                     <label for="grant-reason"
                            class="col-form-label">Reason:</label>
-                    <p class="bg-light" id="grant-reason">
+                    <p class="d-xl-flex p-2 bd-highlight bg-light" id="grant-reason">
                       Uhh, I just forgot that password you sent earlier, sorry.
                     </p>
+                    <label for="members-accepted"
+                           class="col-form-label">Members: (<span class="text-info">4</span> needed):</label>
+                    <p class="bd-highlight bg-light">
+                      John Carrey - <span
+                       class="text-success">accepted</span><br>
+                      Jimmy Buffet - <span
+                       class="text-danger">denied</span><br>
+                      Deirdre Haluna - <span class="text-secondary">no response
+                      yet</span><br>
+                      Helena Wackaberry - <span class="text-secondary">no
+                        response yet</span>
+                    </p>
+                    
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
@@ -190,6 +141,71 @@
                       data-dismiss="modal">Accept</button>
                   </div>
                </div>
+              </div>
+            </div>
+
+            <!-- New chat button -->
+            <button type="button" class="btn btn-info" data-toggle="modal" data-target="#newChatModal">
+              <i class="fas fa-plus"></i>
+            </button>
+            <!-- New chat modal -->
+            <div class="modal fade" id="newChatModal" tabindex="-1" role="dialog" aria-labelledby="newChatModalTitle" aria-hidden="true">
+              <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="newChatModalTitle">New Chat</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    <form>
+                      <div class="form-group">
+                        <label for="chat-name" class="col-form-label">Chat name:</label>
+                        <input type="text" class="form-control" id="chat-name">
+                      </div>
+                      <div class="form-group">
+                        <label for="usernames" class="col-form-label" placeholder="Enter usernames, separated by commas">Members:</label>
+                        <textarea class="form-control" id="usernames" placeholder="user1, user2, ..."></textarea>
+                        <small id="membersHelpBlock" class="form-text text-muted">
+                          Enter the members of the chat by their usernames,
+                          separated by commas.
+                        </small>
+                      </div>
+                      <div class="form-group">
+                        <label for="chat-threshold" class="col-form-label">Threshold:</label>
+                        <input type="text" class="form-control" id="chat-threshold">
+                        <small id="thresholdHelpBlock" class="form-text text-muted">
+                          Enter the minimum number of members needed to grant access to the chat history.
+                          This must be equal or greater than the number of members in the chat.
+                        </small>
+                      </div>
+                      <div class="form-group">
+                        <label for="expiry-time" class="col-form-label">Default message expiry time:</label>
+                        <select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
+                          <option selected>Choose...</option>
+                          <option value="1">1 min</option>
+                          <option value="5">5 min</option>
+                          <option value="10">10 min</option>
+                          <option value="30">30 min</option>
+                          <option value="60">1 hr</option>
+                          <option value="240">4 hr</option>
+                          <option value="600">10 hr</option>
+                          <option value="1440">24 hr</option>
+                        </select>
+                        <small id="expiryHelpBlock" class="form-text text-muted">
+                          This is how long each message is available to see
+                          before it deleted locally and encrypted.
+                        </small>
+
+                      </div>
+                    </form>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                    <button type="submit" class="btn btn-info" data-dismiss="modal">Create</button>
+                  </div>
+                </div>
               </div>
             </div>
 
